# Antoaneta-Stoyanova-

./: .gitignore  .modalignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  CUDA_SETUP.md  MIGRATION_PLAN.md  README.md  main.py  pyproject.toml
adaptive_router/: README.md  __init__.py  pyproject.toml
adaptive_router/adaptive_router/: __init__.py
adaptive_router/adaptive_router/core/: cluster_engine.py  provider_registry.py  router.py
adaptive_router/adaptive_router/evaluators/: __init__.py
adaptive_router/adaptive_router/loaders/: __init__.py  minio.py
adaptive_router/adaptive_router/loaders/readers/: __init__.py
adaptive_router/adaptive_router/models/: __init__.py  api.py  config.py  storage.py
adaptive_router/adaptive_router/savers/: __init__.py  base.py  minio.py
adaptive_router/adaptive_router/savers/writers/: __init__.py  base.py  csv.py  json.py
adaptive_router/core/: __init__.py  cluster_engine.py  router.py  trainer.py
adaptive_router/models/: __init__.py  config.py  storage.py
adaptive_router/scripts/: README.md  __init__.py  convert_profile.py
adaptive_router/src/adaptive_router/: __init__.py
adaptive_router/src/adaptive_router/core/: __init__.py  cluster_engine.py  provider_registry.py  router.py  trainer.py
adaptive_router/src/adaptive_router/dataset/: __init__.py
adaptive_router/src/adaptive_router/exceptions/: __init__.py  core.py
adaptive_router/src/adaptive_router/loaders/: __init__.py  base.py  local.py  minio.py
adaptive_router/src/adaptive_router/models/: health.py  storage.py
adaptive_router/tests/core/: test_router.py  test_unirouter.py
adaptive_router/tests/loaders/: test_local.py  test_minio.py
adaptive_router/tests/savers/: test_local.py  test_minio.py
adaptive_router_app/: README.md  main.py  pyproject.toml  railway.json
adaptive_router_app/adaptive_router_app/: __init__.py  config.py  main.py  models.py
adaptive_router_app/adaptive_router_app/utils/: __init__.py  model_resolver.py
adaptive_router_app/src/adaptive_router_app/: main.py
adaptive_router_app/tests/utils/: test_model_resolver.py
adaptive_router_core/: CMakeLists.txt  README.md  conanfile.py
adaptive_router_core/bindings/python/: CMakeLists.txt  adaptive_core_py.cpp  pyproject.toml
adaptive_router_core/cmake/: AdaptiveCompileOptions.cmake
adaptive_router_core/core/tests/: test_router.cpp
adaptive_router_core/src/cuda/: cluster_cuda.cu  cluster_cuda.hpp
adaptive_router_core_cu12/: README.md  conanfile.py  pyproject.toml
benchmarks/: .gitignore  pyproject.toml
benchmarks/swe-bench/profiling/: .gitignore  Documentation.md
benchmarks/swe-bench/swe-bench/: .gitignore  README.md
nordlys/: .coveragerc  CHANGELOG.md  README.md  pyproject.toml
nordlys-core/: .gitignore  CMakeLists.txt  CMakeUserPresets.json  README.md  conanfile.py
nordlys-core-cu12/: conanfile.py  pyproject.toml
nordlys-core/benchmarks/: .gitignore  CMakeLists.txt  PROFILING.md  README.md  bench_checkpoint_e2e.cpp  bench_cluster_backend.cpp  bench_routing_cuda.cpp  bench_routing_e2e.cpp  bench_utils.hpp
nordlys-core/benchmarks/fixtures/: checkpoint_medium.json  checkpoint_small.json
nordlys-core/benchmarks/scripts/: README.md  profile.sh
nordlys-core/bindings/: CMakeLists.txt  README.md
nordlys-core/bindings/c/: CMakeLists.txt  README.md
nordlys-core/bindings/c/include/: nordlys.h
nordlys-core/bindings/python/: .gitignore  CMakeLists.txt  README.md  conanfile.py  pyproject.toml
nordlys-core/build-profile/: CMakeCache.txt  Makefile  cmake_install.cmake  compile_commands.json
nordlys-core/build-profile/benchmarks/: Makefile  bench_nordlys_core  bench_nordlys_cuda  cmake_install.cmake
nordlys-core/build-profile/bindings/: Makefile  cmake_install.cmake
nordlys-core/build-profile/core/: Makefile  cmake_install.cmake
nordlys-core/build-test/: CMakeCache.txt
nordlys-core/checkpoint/: CMakeLists.txt  README.md
nordlys-core/checkpoint/src/: checkpoint.cpp
nordlys-core/checkpoint/tests/: CMakeLists.txt  test_checkpoint.cpp
nordlys-core/clustering/: CMakeLists.txt  README.md
nordlys-core/clustering/src/: cluster_cpu.cpp  cluster_cuda.cu  cluster_factory.cpp
nordlys-core/clustering/tests/: CMakeLists.txt  test_cluster.cpp  test_cuda_memory.cu
nordlys-core/cmake/: Config.cmake.in  NordlysCompileOptions.cmake  NordlysConfig.cmake.in
nordlys-core/common/: CMakeLists.txt  README.md
nordlys-core/common/tests/: CMakeLists.txt  test_matrix.cpp
nordlys-core/core/: CMakeLists.txt
nordlys-core/core/src/: checkpoint.cpp  cluster_backend.cpp  cluster_cuda.cu  profile.cpp  scorer.cpp
nordlys-core/core/tests/: CMakeLists.txt  test_checkpoint.cpp  test_cluster.cpp  test_cluster_threadsafety.cpp  test_cuda_memory.cu  test_nordlys.cpp  test_profile.cpp  test_router.cpp  test_scorer.cpp
nordlys-core/routing/: CMakeLists.txt  README.md
nordlys-core/routing/tests/: CMakeLists.txt  test_nordlys.cpp
nordlys-core/scoring/: CMakeLists.txt  README.md
nordlys-core/scoring/src/: scorer.cpp
nordlys-core/scoring/tests/: CMakeLists.txt  test_scorer.cpp
nordlys-core/test/: CMakeLists.txt  README.md
nordlys-core/test/fixtures/: fixtures_loader.hpp
nordlys-core/test/integration/: CMakeLists.txt  test_checkpoint_integration.cpp  test_end_to_end_integration.cpp  test_nordlys_integration.cpp
nordlys/benchmarks/: __init__.py  bench_clustering.py  bench_core.py  bench_embedding_cache.py  bench_reduction.py  conftest.py
nordlys/examples/: README.md  simple_example.py
nordlys/scripts/: README.md  __init__.py  convert_checkpoint.py  migrate_v1_to_v2.py
nordlys/src/nordlys/: __init__.py  nordlys.py
nordlys/tests/: conftest.py  test_dataclasses.py  test_init.py  test_models.py  test_nordlys_basic.py
nordlys/tests/core/: test_cluster_engine.py  test_provider_registry.py  test_router.py  test_unirouter.py
nordlys/tests/integration/: conftest.py  test_fit_transform.py  test_persistence.py  test_routing.py
nordlys/tests/unit/: test_embedding_cache.py
nordlys/train/: __init__.py  config.py  train.py
nordlys/train/examples/: README.md
(+183 files in other folders)
