[build-system]
requires = ["uv_build>=0.9.16,<0.10.0"]
build-backend = "uv_build"

[project]
name = "adaptive_router"
version = "0.1.8"
description = "Intelligent LLM Infrastructure with Smart Model Selection"
authors = [{ name = "Botir Khaltaev", email = "botirkhaltaev@llmadaptive.uk" }]
requires-python = ">=3.11,<4.0"
readme = "README.md"
license = "MIT"
keywords = ["llm", "ai", "model-selection", "machine-learning", "adaptive"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Typing :: Typed",
]
dependencies = [
  # Data Validation
  "pydantic>=2.11.5,<3",
  "sentence-transformers>=5.2.0,<6",
  # Data Processing
  "datasets>=4.4.1",
  "polars>=1.35.2",
  # Evaluation
  "deepeval>=3.7.0",
  "einops>=0.8.1",
]


[project.urls]
Homepage = "https://llmadaptive.uk"
Repository = "https://github.com/Egham-7/adaptive"
Documentation = "https://docs.llmadaptive.uk"
"Bug Tracker" = "https://github.com/Egham-7/adaptive/issues"


[project.optional-dependencies]
cpu = [
  "adaptive-router-core>=0.1.11,<1",
  "torch>=2.5.1",
]
cu12 = [
  "adaptive-router-core-cu12>=0.1.11,<1 ; sys_platform == 'linux'",
  "torch>=2.5.1",
]

[tool.uv]
conflicts = [
  [
    { extra = "cpu" },
    { extra = "cu12" },
  ],
]

[tool.uv.sources]
torch = [
  { index = "pytorch-cpu", extra = "cpu" },
  { index = "pytorch-cu128", extra = "cu12" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true


[dependency-groups]

dev = [
  "ty>=0.0.3,<1",
  "ruff>=0.11.11,<0.14",
  "types-pyyaml>=6.0.12.20250516,<7",
  "types-pyjwt>=1.7.1",
  "pytest>=8.4.1",
  "pytest-cov>=6.2.1",
  "pytest-asyncio>=0.26.0",
]
test = ["pytest>=8.4.1,<9", "pytest-cov>=6.2.1,<8", "pytest-asyncio>=0.24.0,<1"]

[tool.uv-build]
packages = ["adaptive_router"]

[tool.ty]
# ty auto-discovers src/ directory and virtual environment

[tool.ty.src]
exclude = ["tests/", "scripts/"]

[tool.ty.rules]
unused-ignore-comment = "warn"
# Ignore unresolved imports globally (for C++ extension module adaptive_core_ext)
unresolved-import = "ignore"

[tool.pytest.ini_options]
addopts = "-v"
testpaths = ["tests"]

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "def __repr__",
  "if self.debug:",
  "if settings.DEBUG",
  "raise AssertionError",
  "raise NotImplementedError",
  "if 0:",
  "if __name__ == .__main__.:",
  "class .*\\bProtocol\\):",
  "@(abc\\.)?abstractmethod",
]

[tool.ruff]
line-length = 88
target-version = "py311"
