[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "adaptive-router-app"
version = "0.1.0"
description = "FastAPI application for Adaptive Router intelligent model selection service"
authors = [{ name = "Botir Khaltaev", email = "botirkhaltaev@llmadaptive.uk" }]
requires-python = ">=3.12,<4.0"
readme = "README.md"
license = "MIT"
keywords = ["llm", "ai", "model-selection", "fastapi", "api"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
  "Typing :: Typed",
]
dependencies = [
  # Core library dependency with GPU support for production
  "adaptive-router",
  # Data Validation
  "pydantic-settings>=2.0.0,<3",
  # API Framework
  "fastapi>=0.118.2",
  # Serverless Deployment
  "modal>=1.2.4",
]

[tool.uv.sources]
# Workspace member dependency
adaptive-router = { workspace = true }

[project.urls]
Homepage = "https://llmadaptive.uk"
Repository = "https://github.com/Egham-7/adaptive"
Documentation = "https://docs.llmadaptive.uk"
"Bug Tracker" = "https://github.com/Egham-7/adaptive/issues"


[tool.hatchling.build]
# Include adaptive_router_app package
packages = ["adaptive_router_app"]

[tool.mypy]
plugins = ["pydantic.mypy"]
exclude = [
  "model_data/",
  "adaptive_router/tests/",
  "adaptive_router_app/tests/",
  "scripts/models/",
  "adaptive_router/",           # Library is a separate package with py.typed marker (PEP 561)
]
no_implicit_optional = true
warn_return_any = false
warn_unused_ignores = true
disable_error_code = ["import-untyped"]

[[tool.mypy.overrides]]
module = [
  "pydantic.*",
  "pydantic_settings.*",
  "langchain.*",
  "langchain_core.*",
  "langchain_openai.*",
  "langchain_anthropic.*",
  "langchain_groq.*",
  "langchain_google_genai.*",
  "hypercorn.*",
  "fastapi.*",
  "pythonjsonlogger.*",
  "langgraph.*",
  "transformers.*",
  "torch.*",
  "huggingface_hub.*",
  "accelerate.*",
  "pytest.*",
  "sentence_transformers.*",
  "sklearn.*",
  "datasets.*",
  "tqdm.*",
  "polars.*",
  "rich.*",
  "boto3.*",
  "botocore.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
addopts = "-v --strict-markers"
pythonpath = ["."]
testpaths = ["tests"]

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "def __repr__",
  "if self.debug:",
  "if settings.DEBUG",
  "raise AssertionError",
  "raise NotImplementedError",
  "if 0:",
  "if __name__ == .__main__.:",
  "class .*\\bProtocol\\):",
  "@(abc\\.)?abstractmethod",
]
