[build-system]
requires = ["scikit-build-core>=0.10.7", "scikit-build-core-conan>=0.1.0", "nanobind>=2.9.2"]
build-backend = "scikit_build_core_conan.build"

[project]
name = "adaptive-router-core-cu12"
version = "0.1.0"
description = "C++ inference core for Adaptive Router (CUDA 12.x)"
authors = [{ name = "Botir Khaltaev", email = "botirkhaltaev@llmadaptive.uk" }]
requires-python = ">=3.11,<4.0"
license = "MIT"
dependencies = [
  "nvidia-cuda-runtime-cu12>=12.0,<13.0",
  "nvidia-cublas-cu12>=12.0,<13.0",
  "nvidia-cusolver-cu12>=11.0,<13.0",
  "nvidia-cusparse-cu12>=12.0,<13.0",
  "nvidia-nvjitlink-cu12>=12.0,<13.0",
]

[tool.uv]
cache-keys = [
  { file = "../adaptive_router_core/CMakeLists.txt" },
  { glob = "../adaptive_router_core/src/**/*.cpp" },
  { glob = "../adaptive_router_core/src/**/*.cu" },
  { glob = "../adaptive_router_core/include/**/*.hpp" },
  { glob = "../adaptive_router_core/bindings/**/*.cpp" },
  { glob = "../adaptive_router_core/bindings/**/*.h" },
]

[tool.scikit-build]
minimum-version = "build-system.requires"
build-dir = "build/{wheel_tag}"
wheel.packages = []                       # Pure extension module
cmake.build-type = "Release"
cmake.version = ">=3.24"
cmake.source-dir = "../adaptive_router_core"  # Use source from CPU package

[tool.scikit-build.cmake.define]
CMAKE_EXPORT_COMPILE_COMMANDS = "ON"
CMAKE_CXX_STANDARD = "20"
ADAPTIVE_ENABLE_CUDA = "ON"  # CUDA enabled (runtime CPU fallback if no GPU)

[tool.scikit-build-core-conan]
build = "missing"
settings = ["compiler.cppstd=20"]
